# genomics-workflow-agent

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: atac-qc-specialist.md  biology-interpretation-reviewer.md  genomics-file-inspector.md  hypothesis-generation-specialist.md  nextflow-pipeline-specialist.md  scrna-qc-specialist.md  single-cell-modeling-specialist.md
docs/: IMPLEMENTATION_STATUS.md  OVERVIEW.md
env/: environment.yml
examples/: README.md  atac_sample_R1.fastq  atac_sample_R2.fastq  rnaseq_sample_R1.fastq  rnaseq_sample_R2.fastq  run_tiny_demo.sh
examples/api_usage/: consume_agent_report.py  inspect_and_plan.py  run_fastq_agent_dryrun.py  run_fastq_qc_dryrun.py  run_variant_agent_dryrun.py
genomics_workflow_agent/: __init__.py  __main__.py  api.py  cli.py
genomics_workflow_agent/agent/: decision_engine.py  fastq_agent.py  state.py  (+2 more)
references/: README.md
scripts/: docker_check_tools.ps1  docker_check_tools.sh  docker_demo_fastq_agent.ps1  docker_demo_fastq_agent.sh  docker_demo_variant_agent.ps1  docker_demo_variant_agent.sh  docker_test.ps1  docker_test.sh
tests/: conftest.py  test_agent.py  test_api.py  test_check_environment.py  test_execution.py  test_external_tools.py  test_genomics_workflow_agent.py  test_interpretation.py  test_nfcore_launcher.py  test_variant_agent.py
tools/: atac_qc_local.py  check_environment.py  inspect_file.py  nfcore_launcher.py  reference_validator.py  report_builder.py  scrna_qc_local.py  wgs_vcf_qc_local.py
(+54 files in other folders)
